--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                   </a>
                 </div>
                 <div class="col-auto d-none d-lg-block">
-                 <img src="https://i.vgy.me/hzZNoM.jpg" alt="" class="bd-placeholder-img" width="200" height="250">
+                 <img src="https://i.vgy.me/hzZNoM.jpg" alt="error" class="bd-placeholder-img" width="200" height="250">
                 </div>
               </div>
             </div>
