all images fixed

--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
               <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
             </div>
             <div class="col-md-5">
-                <img src="/images/pic6.jpg" alt="" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
+                <img src="https://i.vgy.me/iOTes3.jpg" alt="" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
             </div>
           </div>
           <div class="row featurette d-flex justify-content-center align-items-center my-5">
@@ -70,7 +70,7 @@
               <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
             </div>
             <div class="col-md-5  order-md-1">
-                <img src="/images/pic5.jpg" alt="" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
+                <img src="https://i.vgy.me/coU3fx.jpg" alt="" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
             </div>
           </div>
           <div class="row featurette d-flex justify-content-center align-items-center my-5">
@@ -79,7 +79,7 @@
               <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
             </div>
             <div class="col-md-5">
-                <img src="/images/pic4.jpg" alt="" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
+                <img src="https://i.vgy.me/TyN4zW.jpg" alt="" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
             </div>
           </div>
     </div>
