--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/images/tech6.jpg" class="d-block w-100" alt="..." height="400">
+            <img src="https://i.vgy.me/krFqGQ.jpg" class="d-block w-100" alt="..." height="400">
             <div class="carousel-caption d-none d-md-block">
               <h5>Welcome to iCoder!</h5>
               <p>Technology, Development and Trends</p>
@@ -139,7 +139,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/images/tech5.jpg" class="d-block w-100" alt="..." height="400">
+            <img src="https://i.vgy.me/8flmVf.jpg" class="d-block w-100" alt="..." height="400">
             <div class="carousel-caption d-none d-md-block">
               <h5>Welcome to iCoder!</h5>
               <p>Technology, Development and Trends</p>
@@ -149,7 +149,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/images/tech7.jpg" class="d-block w-100" alt="..." height="400">
+            <img src="https://i.vgy.me/qwI5jF.jpg" class="d-block w-100" alt="..." height="400">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Welcome to iCoder!</h5>
                 <p>Technology, Development and Trends</p>
@@ -200,7 +200,7 @@
                   </a>
                 </div>
                 <div class="col-auto d-none d-lg-block">
-                  <img src="/images/thumb4.jpg" alt="" class="bd-placeholder-img" width="200" height="250">
+                  <img src="https://i.vgy.me/3HbzbC.jpg" alt="" class="bd-placeholder-img" width="200" height="250">
                 </div>
               </div>
             </div>
@@ -219,7 +219,7 @@
                   </a>
                 </div>
                 <div class="col-auto d-none d-lg-block">
-                 <img src="/images/thumb1.jpg" alt="" class="bd-placeholder-img" width="200" height="250">
+                 <img src="https://i.vgy.me/GfME7m.jpg" alt="" class="bd-placeholder-img" width="200" height="250">
                 </div>
               </div>
             </div>
@@ -236,7 +236,7 @@
                   </a>
                 </div>
                 <div class="col-auto d-none d-lg-block">
-                  <img src="/images/thumb2.jpg" alt="" class="bd-placeholder-img" width="200" height="250">
+                  <img src="https://i.vgy.me/nDKeHh.jpg" alt="" class="bd-placeholder-img" width="200" height="250">
                 </div>
               </div>
             </div>
