--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>iCoder - Heaven For Coders</title>
+    <title>DevVerse - Heaven</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">iCoder</a>
+            <a class="navbar-brand" href="/index.html">DevVerse</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/about.html">About</a>
@@ -57,7 +57,7 @@
     <div class="container my-5">
         <div class="row featurette d-flex justify-content-center align-items-center">
             <div class="col-md-7">
-              <h2 class="featurette-heading fw-normal lh-1">It all started with iCoder's Idea. <span class="text-body-secondary">It’ll blow your mind.</span></h2>
+              <h2 class="featurette-heading fw-normal lh-1">It all started with DevVerse's Idea. <span class="text-body-secondary">It’ll blow your mind.</span></h2>
               <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
             </div>
             <div class="col-md-5">
@@ -66,7 +66,7 @@
           </div>
           <div class="row featurette d-flex justify-content-center align-items-center my-5">
             <div class="col-md-7 order-md-2">
-              <h2 class="featurette-heading fw-normal lh-1">We started iCoder in 2005. <span class="text-body-secondary">It’ll blow your mind.</span></h2>
+              <h2 class="featurette-heading fw-normal lh-1">We started DevVerse in 2005. <span class="text-body-secondary">It’ll blow your mind.</span></h2>
               <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
             </div>
             <div class="col-md-5  order-md-1">
@@ -86,7 +86,7 @@
     
     <footer class="container">
         <p class="float-end"><a href="#">Back to top</a></p>
-        <p>© 2023–2024 iCoder, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
+        <p>© 2023–2024 DevVerse, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
       </footer>
 
 
