--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>iCoder - Heaven For Coders</title>
+    <title>DevVerse - Heaven</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/iCoder">iCoder</a>
+            <a class="navbar-brand" href="/index.html">DevVerse</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -22,10 +22,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/iCoder">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/iCoder/about.html">About</a>
+                        <a class="nav-link" href="/about.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -43,7 +43,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/iCoder/contact.html">Contact Us</a>
+                        <a class="nav-link" href="/contact.html">Contact Us</a>
                     </li>
                     
                 </ul>
@@ -63,7 +63,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="loginModalLabel">Login to iCoder!</h1>
+          <h1 class="modal-title fs-5" id="loginModalLabel">Login to DevVerse!</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -92,7 +92,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="signupModalLabel">Get an iCoder account!</h1>
+          <h1 class="modal-title fs-5" id="signupModalLabel">Get an DevVerse account!</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -131,7 +131,7 @@
           <div class="carousel-item active">
             <img src="https://i.vgy.me/krFqGQ.jpg" class="d-block w-100" alt="..." height="400">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Welcome to iCoder!</h5>
+              <h5>Welcome to DevVerse!</h5>
               <p>Technology, Development and Trends</p>
               <button class="btn btn-danger">Technology</button>
               <button class="btn btn-primary">Web Development</button>
@@ -141,7 +141,7 @@
           <div class="carousel-item">
             <img src="https://i.vgy.me/8flmVf.jpg" class="d-block w-100" alt="..." height="400">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Welcome to iCoder!</h5>
+              <h5>Welcome to DevVerse!</h5>
               <p>Technology, Development and Trends</p>
               <button class="btn btn-danger">Technology</button>
               <button class="btn btn-primary">Web Development</button>
@@ -151,7 +151,7 @@
           <div class="carousel-item">
             <img src="https://i.vgy.me/qwI5jF.jpg" class="d-block w-100" alt="..." height="400">
             <div class="carousel-caption d-none d-md-block">
-                <h5>Welcome to iCoder!</h5>
+                <h5>Welcome to DevVerse!</h5>
                 <p>Technology, Development and Trends</p>
                 <button class="btn btn-danger">Technology</button>
                 <button class="btn btn-primary">Web Development</button>
@@ -245,7 +245,7 @@
 
       <footer class="container">
         <p class="float-end"><a href="#">Back to top</a></p>
-        <p>© 2023–2024 iCoder, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
+        <p>© 2023–2024 DevVerse, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
       </footer>
 
 
